[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intent-parser"
version = "0.1.0"
description = "Parse vague user intents into structured agent objectives"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
intent-parser = "intent_parser.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
